--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ matplotlib>=3.8.0
 seaborn>=0.13.0
 scipy>=1.12.0
 openpyxl>=3.1.2
-google-cloud-firestore>=2.14.0
 google-auth-oauthlib>=1.2.0
 protobuf>=4.25.1
 python-dateutil>=2.8.2
@@ -13,4 +12,7 @@ pytz>=2024.1
 python-pptx
 weasyprint
 plotly
-google-generativeai>=0.7.0
+# --- Google Libraries (AI Platform Version) ---
+google-cloud-aiplatform
+google-cloud-firestore
+# --- End Google Libraries ---
